tests/fixtures/fail/standard_throw_ambiguous_throws.sc
use core.effects.Throws

let fail(): Never with(Throws(i32), Throws(bool)) = {
  throw 0
}

let main(): i32 = {
  0
}
